--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,119 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(166, 207, 124);
+}
+.board-container {
+  background-color: rgb(236, 227, 98);
+  height: 70vh;
+  margin: 20px;
+  padding: 20px;
+  border-radius: 10px;
+  position: relative;
+}
+.newbutton {
+  position: absolute;
+  right: 0;
+  top: 0;
+  outline: none;
+  border: none;
+  margin: 10px;
+  padding: 3px 8px;
+  background: #66dbfa;
+  box-shadow: 1px 1px 1px grey;
+  z-index: 9999;
+  transition: all 0.1s ease;
+}
+.newbutton:hover {
+  transform: scale(1.03);
+}
+.board-container #form {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  right: 80px;
+  top: 0;
+  outline: none;
+  border: none;
+  margin: 10px;
+  padding: 3px 8px;
+  background: #66dbfa;
+  box-shadow: 1px 1px 1px grey;
+  z-index: 9999;
+  transition: all 0.1s ease;
+}
+.savebutton{
+  position: relative;
+  bottom: 0;
+  top: 100;
+  outline: none;
+  border: none;
+  margin: 10px;
+  padding: 3px 8px;
+  background: #0b4fe2;
+  box-shadow: 1px 1px 1px grey;
+  z-index: 9999;
+  transition: all 0.1s ease;
+  color: white;
+}
+.card-container {
+  background-color: yellow;
+  padding: 5px 10px !important;
+  border: 1px solid black;
+  min-width: 15vw;
+  max-width: 30vw;
+  position: absolute;
+  max-height: 70vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.card-container div {
+  position: relative;
+}
+.card-container .delete {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0px;
+  padding: 0px;
+  background: none;
+  box-shadow: none;
+  border: none;
+  z-index: 0;
+
+
+}
+.card-container .pin {
+  position: absolute;
+  top: 0;
+  right: 20px;
+  margin: 0px;
+  padding: 0px;
+  background: none;
+  box-shadow: none;
+  border: none;
+  z-index: 0;
+}
+.card-container .edit {
+  display: block;
+  width: 100%;
+  position: relative;
+  bottom: 0;
+  right: 0;
+  margin: 0px;
+  padding: 0px;
+  background: none;
+  box-shadow: none;
+  z-index: 0;
+  background-color: rgb(236, 240, 243);
+  transition: all 0.1s ease;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
